# Kali

./: .gitignore
cf/: alternating_series.cpp  alternating_subsequences.cpp  amr_and_pins.cpp  anton_and_danik.cpp  arrange_the_sheep.cpp  array_merging.cpp  assembly_via_minimums.cpp  b_buttons.cpp  bad_ugly_numbers.cpp  basketballExercise.cpp  beautifulMatrix.cpp  beautiful_year.cpp  berland_poker.cpp  bit++.cpp  black_and_white_stripe.cpp  board_moves.cpp  boats_competition.cpp  bobritto_bandito.cpp  bogosort.cpp  boyOrGirl.cpp  buying_torches.cpp  cake_collection.cpp  calculating_function.cpp  caps_lock.cpp  card_game.cpp  cf.cpp  challenging_cliffs.cpp  cheapTravel.cpp  chewbaccaNNumber.cpp  choose_the_different_ones.cpp  contrast_value.cpp  cp.cpp  cut_the_array.cpp  different_divisors.cpp  dima_friends.cpp  distinct_split.cpp  dominoPiling.cpp  donut_shops.cpp  dragons.cpp  drazil_and_factorial.cpp  (+104 more)
cheatsheet/: claude.cpp
hr/: dequeSTL.cpp  hotelPrices.cpp  loop.cpp
kk/: 2048.cpp  hippHipp.cpp  message.cpp  tilHamingju.cpp  zamka.cpp
lt/: 118.cpp  125.cpp  1323.cpp  1399.cpp  1695.cpp  1957.cpp  20.cpp  2094.cpp  2099.cpp  2145.cpp  2379.cpp  2410.cpp  2785.cpp  2942.cpp  3191.cpp  3304.cpp  3355.cpp  3375.cpp  3392.cpp  342.cpp  3423.cpp  3439.cpp  (+8 more)
ml/: CMakeLists.txt  README.md
ml/examples/: main.cpp
ml/include/core/: Autograd.hpp  DataGenerator.hpp  DataLoader.hpp  Tensor.hpp
ml/include/functions/: Activations.hpp  Loss.hpp
ml/include/layers/: Layer.hpp  Linear.hpp
ml/include/optim/: Optimizer.hpp  RMSProp.hpp
ml/src/layers/: Linear.cpp
(+68 files in other folders)
